# chess_stuff

./: .gitignore  CMakeLists.txt  autosave.xmi  chess.workspace  chess.workspace.layout
chess/: .gitignore  CMakeLists.txt  CppCheckResults.xml  appmodel.cpp  appmodel.h  appui.glade  appui.glade~  chess.cbp  chess.depend  chess.gresource.xml  chess.layout  chessapplication.cpp  chessapplication.h  chessboard.cpp  chessboard.h  chessedit.cpp  chessedit.h  chessengine.cpp  chessengine.h  chessinfo.h  chessmain.cc  chessview.cpp  chessview.h  colourchooser.cpp  colourchooser.h  dlgcolours.cpp  dlgcolours.h  dlginput.cpp  dlginput.h  dlgpiecevalues.cpp  dlgpiecevalues.h  fentranslator.cpp  fentranslator.h  main.cpp  piecevalues.cpp  piecevalues.h  pods.h  resources.c  testcolourchooser.cpp  testcolourchooser.h  (+8 more)
chess/ADTsrc/: board.cc  board.h  chessgame.cc  chessgame.h  pgnlexer.cc  pgnlexer.h  pgnparser.cc  pgnparser.h  pgntoken.cc  pgntoken.h  ply.cc  ply.h  pnglexer.cc  pnglexer.h  pngparser.cc  pngparser.h  pngtoken.cc  pngtoken.h  pods.cc  pods.h
chess/doxygen/: CMakeLists.txt  doxyfile
chess/doxygen/html/: annotated.html  annotated_dup.js  appmodel_8h_source.html  chessapplication_8h_source.html  chessboard_8h_source.html  chessedit_8h_source.html  chessengine_8h_source.html  chessinfo_8h_source.html  chessview_8h_source.html  class_app_model-members.html  class_app_model.html  class_app_model.js  class_chess_application-members.html  class_chess_application.html  class_chess_application.js  class_chess_board-members.html  class_chess_board.html  class_chess_board.js  class_chess_edit-members.html  class_chess_edit.html  class_chess_edit.js  class_chess_engine-members.html  class_chess_engine.html  class_chess_engine.js  class_chess_info-members.html  class_chess_info.html  class_chess_info.js  class_chess_window-members.html  class_chess_window.html  class_chess_window.js  class_colour_chooser-members.html  class_colour_chooser.html  class_colour_chooser.js  class_dialog_colours-members.html  class_dialog_colours.html  class_dialog_colours.js  class_dialog_input-members.html  class_dialog_input.html  class_dialog_input.js  class_dialog_piece_values-members.html  (+92 more)
chess/guisrc/: CMakeLists.txt  appui.glade  chess.gresource.xml  chessappgui.cc  chessappgui.h  chessapplication.cc  chessapplication.h  chessboard.cc  chessboard.h  chesscontroller.cc  chesscontroller.h  chessedit.cc  chessedit.h  chessinfo.cc  chessinfo.h  chessview.cc  chessview.h  dialog_tester.cc  dialogs.cc  dialogs.h  dlgcolours.cc  dlgcolours.h  dlgfilenamechooser.cc  dlgfilenamechooser.h  dlginput.cc  dlginput.h  dlgpiecevalues.cc  dlgpiecevalues.h  dlgtimeinputter.cc  dlgtimeinputter.h  engineinterface.h
chess/guisrc/resources/: CMakeLists.txt  app.cmb  app.ui  appui.glade
chess/logicsrc/: CMakeLists.txt  appmodel.cc  appmodel.h  board.cc  board.h  chessappbase.cc  chessappbase.h  chessengine.cc  chessengine.h  chessgame.cc  chessgame.h  colourchooser.cc  colourchooser.h  engineinterface.h  fentranslator.cc  fentranslator.h  filenamechooser.cc  filenamechooser.h  gameloader.cc  gameloader.h  gamestate.cc  gamestate.h  movegenerator.cc  movegenerator.h  pgnparser.cc  pgnparser.h  pgntoken.cc  pgntoken.h  piece.cc  piece.h  piecevalues.cc  piecevalues.h  ply.cc  ply.h  pods.cc  pods.h  presentationinterface.h  timeinputter.h
chess/logictest/: CMakeLists.txt  gtest_gameobject.cc  test.pgn  test_attacktable_creation.cc  test_attacktable_creation.h  testapplication.cc  testapplication.h  testcolourchooser.cc  testfentranslator.cc  testfentranslator.h  testfilenamechooser.cc  testfilenamechooser.h  testgameobject.cc  testgameobject.h  testpgnlexer.cc  testpgnparser.cc  testpgnparser.h  testpgntoken.cc  testpgntoken.h  testpiecevalues.cc  testpiecevalues.h  testpnglexer.cc  testpnglexer.h  testpngparser.cc  testpngparser.h  testpngtoken.cc  testpngtoken.h  teststhalvemove.cc  teststhalvemove.h  testtimeinputter.cc  testtimeinputter.h
chess/src/: board.cc  board.h  chessengine.h  piece.cc  ply.cc  ply.h
chess/test/: CMakeLists.txt  gtest_attacktable.cc  gtest_board.cc  gtest_evaluation.cc  gtest_gameobject.cc  gtest_objectsizes.cc
chess/ui/: CMakeLists.txt  board_view.cc  board_view.h  chess_window.cc  chess_window.h  chessboard.cc  chessboard.h  chesscontroller.cc  chesscontroller.h  dialog_tester.cc  dialogs.cc  dialogs.h  new_chess.cc  temp.cc
chess/ui/resources/: CMakeLists.txt  app copy.css  app.cmb  app.ui  appui.glade  chess.blp  chess.css  chess.gresource.xml
chess_parser/guisrc/: CMakeLists.txt  chessparsercontroller.cc  chessparsercontroller.h  main.cc
chess_parser/guisrc/resources/: CMakeLists.txt  chessparser.gresource.xml  (+1 more)
clic/: CMakeLists.txt  board.cc  board.h  chessgame.cc  chessgame.h  clic.cbp  display.cc  display.h  main.cc  move.cc  move.h  piece.cc  piece.h  ply.cc  ply.h  testboard.cc  testboard.h  testclic.cc  testclic.h  testevaluation.cc  testevaluation.h  testobjectsizes.cc  testobjectsizes.h
clic/logicsrc/: CMakeLists.txt  board.cc  board.h  display.cc  game.cc  game.h  piece.cc  piece.h  piece_square_tables.cc  ply.cc  ply.h
clic/src/: CMakeLists.txt  board.cc  board.h  chessgame.cc  chessgame.h  display.cc  display.h  game.cc  piece.cc  piece.h  piece_square_tables.cc  ply.cc  ply.h
clic/test/: CMakeLists.txt  gtest_attacktable.cc  gtest_board.cc  gtest_evaluation.cc  gtest_gameobject.cc  gtest_objectsizes.cc  testboard.cc  testboard.h  testclic.cc  testevaluation.cc  testevaluation.h  testgameobject.cc  testobjectsizes.cc  testobjectsizes.h
clic/ui/: CMakeLists.txt  chessgame.cc  chessgame.h  display.cc  display.h
doxygen/: CMakeLists.txt  chess_api  clic_api
square_convertor/guisrc/: CMakeLists.txt  controller.cc  controller.h  main.cc  resources.c  square_convertor.blp  square_convertor.cc  square_convertorcontroller.cc  square_convertorcontroller.h
square_convertor/logictest/: CMakeLists.txt  gtest_square_convertor.cc  test_runner.cc  test_square_convertorengine.cc  test_square_convertorengine.h
square_convertor/test/: CMakeLists.txt
(+294 files in other folders)
